# discord_bot

./: .dockerignore  .drone.yml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  example.env  example.settings.toml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  schema.sql  test_accents.py  update.sh
.forgejo/workflows/: main.yaml
.github/workflows/: main.yaml
accents/: autumn.py  clown.py  computer.py  cowboy.py  dashes.py  drunk.py  dyslexic.py  e.py  excited.py  french.py  leet.py  mime.py  ork.py  owo.py  reversed.py  schizophrenia.py  scotsman.py  slav.py  spanish.py  spurdo.py  stutter.py  swedish.py
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql
pink/: __main__.py  bot.py  checks.py  cog.py  constants.py  context.py  decorators.py  errors.py  hookable.py  hooks.py  logging.py  regexes.py  settings.py  types.py  utils.py
pink/cogs/: accents.py  chat.py  fun.py  images.py  meta.py  servermyserver.py  techadmin.py  unitystation.py
pink/cogs/accents/: __init__.py  cog.py  constants.py  types.py
pink/cogs/accents/accents/: __main__.py  accent.py  autumn.py  base64.py  binary.py  clown.py  cowboy.py  drunk.py  dyslexic.py  e.py  owo.py  reversed.py  schizophrenia.py
pink/cogs/chat/: __init__.py  types.py
pink/cogs/images/: __init__.py  flies.py  ocr.py  types.py
pink/cogs/translator/: __init__.py  constants.py  types.py
pink/cogs/unitystation/: __init__.py  servers.py
pink/cogs/utils/: __init__.py  errorhandler.py  responsetracker.py
pink_accents/: Cargo.toml  README.md
pink_accents/src/: accent.rs  capture.rs  lib.rs  replacement.rs  scotsman.rs  source.rs  target.rs
potato_bot/: __main__.py  bot.py  cog.py  context.py  types.py  utils.py
potato_bot/cogs/: chat.py  fun.py  images.py  meta.py  techadmin.py  unitystation.py
potato_bot/cogs/accents/: __init__.py  experiments.py
potato_bot/cogs/accents/accents/: accent.py  autumn.py  clown.py  cowboy.py  dashes.py  drunk.py  e.py  owo.py  schizophrenia.py  sha256.py  spurdo.py  stutter.py  swedish.py
potato_bot/cogs/utils/: errorhandler.py  responsetracker.py
requirements/: base.in  base.txt  dev.in  dev.txt
scripts/: migrate_edgedb_to_postgres_i_ve_had_enough.py  migrate_postgres_to_sqlite.py  migrate_sqlite_to_edgedb.py  update.sh
src/: __main__.py  accent.rs  bot.py  capture.rs  checks.py  cog.py  context.py  converters.py  decorators.py  errors.py  hooks.py  lib.rs  regexes.py  replacement.rs  scotsman.rs  settings.py  utils.py
src/classes/: bot.py  cache.py  context.py  version.py
src/cogs/: fun.py  meta.py  servermyserver.py  techadmin.py
src/cogs/accents/: __init__.py  cog.py  constants.py  types.py
src/cogs/chat/: __init__.py  types.py
src/cogs/images/: __init__.py  constants.py  flies.py  ocr.py  types.py
src/cogs/translator/: __init__.py  constants.py  types.py
src/cogs/unitystation/: __init__.py  servers.py
src/cogs/utils/: __init__.py  errorhandler.py  responsetracker.py
units/: pink.service  potato_bot.service
