[package]
name = "pink-accents-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "pink_accents_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.2", features = ["extension-module"] }
fancy-regex = { version = "0.8.0", features = ["perf-dfa", "perf-literal"] }
lazy_static = "1.4.0"
parking_lot = "0.12.0"

[profile.release]
codegen-units = 1
lto = true
