[project]
name = "PINK"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "discord-py[speed]>=2.0",
    "googletrans-py==4.0.0",
    "pink-accents==0.1.1",
    "pillow>=10.4.0",
    "sentry-sdk>=2.13.0",
    "orjson>=3.10.7",
    "uvloop>=0.20.0",
    "aiocache>=0.12.2",
    "redis[hiredis]>=5.0.8",
    "yarl>=1.9.4",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.2",
    "types-redis>=4.6.0.20240819",
    "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 121

[tool.ruff.lint]
ignore = [
    # doesn't like Optional
    # https://github.com/charliermarsh/ruff/issues/4858
    "UP007",
    # explicit raise from might be a bit too verbose, disable for now
    "B904",
    # suggest inlining complex if statements
    "SIM108",
]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bugbear
    "B",
    # flake8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-comprehensions
    "C4",
    # flake8-logging-format
    "G",
    # flake8-simplify
    "SIM",
    # flake8-use-pathlib
    "PTH",
    # ruff
    "RUF",
    # flake8-unused-arguments
    "ARG",
    # perflint
    "PERF",
    # refurb
    "FURB",
]
fixable = [
    "I"
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["discord.ext.commands.parameter"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
combine-as-imports = true
lines-between-types = 1

[tool.mypy]
python_version = "3.12"

show_column_numbers = true
show_error_codes = true

warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
# it is very convenient to return from event handler
# warn_return_any = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
# discord models are untyped
# disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
# discord decorators are untyped because it is currently not type checked
# disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "googletrans.*",
    "aiocache.*",
]
ignore_missing_imports = true
